plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
    maven {
        name = 'buf'
        url 'https://buf.build/gen/maven'
    }
}

// Publish to GitHub Packages (same pattern as old sati)
// Artifact: com.tcn.exile.sati:sati_rewrite (coexists with old sati's :core)
publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.tcn.exile.sati'
            from components.java
        }
    }
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/tcncloud/sati")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
}

jar {
    manifest {
        attributes 'Implementation-Version': project.version
    }
}

dependencies {
    // Javalin Core (for Context and Handler types)
    api 'io.javalin:javalin:6.7.0'
    
    // OpenAPI Annotations (to define swagger docs in code)
    api 'io.javalin.community.openapi:javalin-openapi-plugin:6.7.0'
    api 'io.javalin.community.openapi:javalin-swagger-plugin:6.7.0'
    annotationProcessor 'io.javalin.community.openapi:openapi-annotation-processor:6.7.0'
    api 'io.swagger.core.v3:swagger-annotations:2.2.20'
    
    // JSON Serialization
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'

    // Bouncy Castle (for PKCS#1 key support)
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'

    // Logging (API only - implementation provided by consuming app)
    api 'org.slf4j:slf4j-api:2.0.12'
    compileOnly 'ch.qos.logback:logback-classic:1.5.6' // For MemoryLogAppender compilation

    // gRPC — must match the version pulled by buf-generated protos
    api 'io.grpc:grpc-protobuf:1.80.0'
    api 'io.grpc:grpc-stub:1.80.0'
    api 'io.grpc:grpc-netty-shaded:1.80.0'
    compileOnly 'org.apache.tomcat:annotations-api:6.0.53'

    // Database (connection pooling only - JDBC drivers provided by consuming apps)
    implementation 'com.zaxxer:HikariCP:5.1.0'

    // Exile API (Generated Protos)
    api "build.buf.gen:tcn_exileapi_grpc_java:${exileapiGrpcVersion}"
    api "build.buf.gen:tcn_exileapi_protocolbuffers_java:${exileapiProtobufVersion}"

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'ch.qos.logback:logback-classic:1.5.6'
    testImplementation 'com.h2database:h2:2.2.224'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    useJUnitPlatform()
}
